--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -30,10 +30,7 @@ jobs:
   build-32bit:
     runs-on: windows-latest
     steps:
-      - name: Install v141_xp
-        uses: thepwrtank18/install-vs-components@v1.0.0
-        with:
-          components: Microsoft.VisualStudio.Component.WinXP
+      - uses: seanmiddleditch/gha-setup-vsdevenv@master
 
       - name: Download And Install 32-bit OpenSSL 3.1.2
         run: |
@@ -75,10 +72,7 @@ jobs:
   build-64bit:
     runs-on: windows-latest
     steps:
-      - name: Install v141_xp
-        uses: thepwrtank18/install-vs-components@v1.0.0
-        with:
-          components: Microsoft.VisualStudio.Component.WinXP
+      - uses: seanmiddleditch/gha-setup-vsdevenv@master
           
       - name: Download And Install 64-bit OpenSSL 3.1.2
         run: |
