--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -30,12 +30,11 @@ jobs:
   build-32bit:
     runs-on: windows-latest
     steps:
-      - name: Setup MSBuild
-        uses: microsoft/setup-msbuild@v1
-        with:
-          vs-version: '[16.4,16.5)'
-    
-      - uses: seanmiddleditch/gha-setup-vsdevenv@master
+      - name: Setup VS2019
+        uses: richardo2016/Setup-MSBuild@releases/clangcl_x_2017/v1
+        
+      - name: Install v141_xp
+        uses: seanmiddleditch/gha-setup-vsdevenv@master
         with:
           components: "Microsoft.VisualStudio.Component.WinXP"
           vswhere: "C:\\ProgramData\\Chocolatey\\bin\\vswhere.exe"
